Create nice title page in report.

--- a/report/id1217-project-joelpet.tex
+++ b/report/id1217-project-joelpet.tex
@@ -12,14 +12,25 @@
 \usepackage{parskip}
 \usepackage{ucs}
 
-\author{Joel Pettersson}
-\title{Programming Project: Parallelize Particle Simulation}
+\title{
+    {\normalsize\sc ID1217 Concurrent Programming} \\ 
+    {\large Programming project} \\
+    Parallelize Particle Simulation
+}
+
+\author{
+    \bf Joel Pettersson \\
+    \bf 880519-0637 \\
+}
+
 
 \lstset{%
 basicstyle=\small,  % print whole listings small
 }
 
 \begin{document}
+
+\maketitle
 
 \begin{figure}
     \begin{center}
