Update linear plot accordingly to previous gp change.

--- a/report/plots/linear.tex
+++ b/report/plots/linear.tex
@@ -179,7 +179,7 @@
 \color{black}
 \thicklines \path(431,1717)(431,265)(2876,265)(2876,1717)(431,1717)
 \color{black}
-\put(61,991){\makebox(0,0)[l]{\rotatebox[origin=c]{90}{Time (s)\hspace{10 mm}}}}
+\put(61,991){\makebox(0,0)[l]{\shortstack{T\\i\\m\\e\\ \\i\\n\\ \\s\\e\\c\\o\\n\\d\\s}}}
 \color{black}
 \color{black}
 \put(1653,58){\makebox(0,0){Number of particles (n)}}
